syntax = "proto3";

package posts;

service PostService {
  // Post --
  rpc GetAllPosts (GetAllPostsRequest) returns (PostsResponse);
  rpc GetPostId (GetPostIdRequest) returns (PostResponse);
  rpc CreatePost (CreatePostRequest) returns (PostResponse);
  rpc CheckPostExists (CheckPostExistsRequest) returns (CheckPostExistsResponse);
  rpc UpdatePost (UpdatePostRequest) returns (PostResponse);
  rpc DeletePost (DeletePostRequest) returns (DeletePostResponse);

  // Like --
  rpc GetAllLike (GetAllLikeRequest) returns (ManyLikeResponse);
  rpc GetLikeId (GetLikeIdRequest) returns (LikeResponse);
  rpc CreateLike (CreateLikeRequest) returns (LikeResponse);
  rpc CheckLikeExists (CheckLikeExistsRequest) returns (CheckLikeExistsResponse);
  rpc UpdateLike (UpdateLikeRequest) returns (LikeResponse);
  rpc DeleteLike (DeleteLikeRequest) returns (DeleteLikeResponse);
}

// Post --
message GetAllPostsRequest {
  int32 page = 1;
  int32 take = 2;
  string search = 3;
}

message GetPostIdRequest {
  string id = 1;
}

message CreatePostRequest {
  string content = 1;
  repeated bytes mediaPath = 2;
  string userId = 3;
}

message CheckPostExistsRequest {
  string id = 1;
}

message CheckPostExistsResponse {
  bool exists = 1;
}

message UpdatePostRequest {
  string id = 1;
  string content = 2;
  repeated bytes mediaPath = 3;
  string userId = 4;
}

message PostResponse {
  string id = 1;
  string content = 2;
  repeated string mediaPath = 3;
  string createdAt = 4;
  string createdBy = 5;
  string updatedAt = 6;
  string updatedBy = 7;
  string deletedAt = 8;
  string deletedBy = 9;
  string userId = 10;
}

message PageMeta {
  int32 page = 1;
  int32 take = 2;
  int32 itemCount = 3;
  int32 pageCount = 4;
  bool hasPreviousPage = 5;
  bool hasNextPage = 6;
}

message PostsResponse {
  repeated PostResponse data = 1;
  PageMeta meta = 2;
  string message = 3;
}

message DeletePostRequest {
  string id = 1;
}

message DeletePostResponse {
  string data = 1;
  string message = 2;
}

// Like --
message GetAllLikeRequest {
  int32 page = 1;
  int32 take = 2;
  string search = 3;
}

message GetLikeIdRequest {
  string id = 1;
}

message CreateLikeRequest {
  string postId = 1;
  string userId = 2;
}

message CheckLikeExistsRequest {
  string id = 1;
}

message CheckLikeExistsResponse {
  bool exists = 1;
}

message UpdateLikeRequest {
  string id = 1;
  string postId = 2;
  string userId = 3;
}

message LikeResponse {
  string id = 1;
  string postId = 2;
  string userId = 3;
  string createdAt = 4;
  string createdBy = 5;
  string updatedAt = 6;
  string updatedBy = 7;
  string deletedAt = 8;
  string deletedBy = 9;
}

message ManyLikeResponse {
  repeated LikeResponse data = 1;
  PageMeta meta = 2;
  string message = 3;
}

message DeleteLikeRequest {
  string id = 1;
}

message DeleteLikeResponse {
  string data = 1;
  string message = 2;
}
